# deep-reader

./: .gitignore  CLAUDE.md  EPUB_PATH_FIX.md  README.md  README_EN.md  WINDOWS_DEBUG.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test-markdown-levels.md
.claude/agents/: backend-deveplover.md
.github/workflows/: ci.yml
docs/: aiAssistant.md  debug.md  debug_reading_progress.md  development.md  development_task.md  google_gemini_api_troubleshooting.md  implementation-summary.md  internationalization-summary.md  internationalization.md  multi-format-paring-task.md  multi-format-paring.md  quick-start.md  spec.md  test_scroll_restoration.md  user-guide.md  开发流程优化建议.md  智能章节合并系统技术文档.md  章节切分_debug_面板_prd.md  章节切分_debug_面板_实现总结.md  章节合并评分规则_prd.md
docs/test-books/: Node.js — Introduction to Node.js.html  irp_dolphin_多格式导入_prd（mvp_集成版）.md
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  explore_toc.rs  tauri.conf.json  test.rs  test_epub_dedup.rs  test_epub_parse.rs  test_epub_parser.rs  test_epub_toc.rs
src-tauri/capabilities/: default.json
src-tauri/src/: asset_manager.rs  async_import.rs  db.rs  encryption.rs  import_queue.rs  irp.rs  lib.rs  main.rs
src-tauri/src/parser/: chapter_detector.rs  epub_parser.rs  md_parser.rs  mod.rs  pdf_parser.rs  txt_parser.rs
src-tauri/src/reading_unit/: decision_engine.rs  fallback_strategy.rs  feature_extractor.rs  integration_tests.rs  mod.rs  reading_unit_builder.rs  scoring_engine.rs  segment_builder.rs  types.rs
src/components/ai/: AIConfigDialog.tsx  AISidebar.tsx
src/components/common/: FirstTimeHint.tsx  GlobalSettingsDialog.tsx  LanguageSwitcher.tsx  Toast.tsx  ToastContainer.tsx
src/components/debug/: ReadingUnitDebugger.tsx  ReadingUnitPreview.tsx  SegmentDetailPanel.tsx  SegmentTimeline.tsx
src/components/immersive-reader/: BookCard.tsx  ChapterList.tsx  ImmersiveReader.tsx  ReaderContent.tsx  mockData.ts  types.ts
src/components/notes/: AnalyticsView.tsx  CreateNoteDialog.tsx  NoteDetailPanel.tsx  NoteSidebar.tsx  TrashView.tsx
src/components/reader/: AIExplainCard.tsx
src/hooks/: useToast.ts
src/locales/en/: translation.json
src/locales/zh-CN/: translation.json
src/types/: ai.ts  debug.ts  notes.ts
src/utils/: categoryTranslation.ts  errorHandler.ts
