[package]
name = "deep-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deep_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 用于 EPUB 解析
epub = "2.1.0"
# 用于 SQLite
rusqlite = { version = "0.31", features = ["bundled"] }
# 用于 HTTP 请求 (Rust侧)
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
base64 = "0.22"
thiserror = "1.0"
regex = "1.12.2"
tokio = { version = "1", features = ["full"] }
# 用于加密
aes-gcm = "0.10"
rand = "0.8"
# 用于测试
tempfile = "3.10"

